# ckb-auth

./: Makefile
c/: auth.c  auth_libecc.c  ckb_auth.h
ckb-auth-rs/: Cargo.toml
ckb-auth-rs/on_chain_script/: auth  auth_libecc
ckb-auth-rs/src/: ckb_auth.rs  lib.rs  load_library.rs
tests/: Makefile
tests/auth-c-lock/: Makefile  Makefile.clang  multi_auth_c_lock.c
tests/auth-c-tests/src/: lib.rs  on_chain_script.rs  test_config.rs
tests/auth-c-tests/src/auth/: mod.rs  multi_auth.rs
tests/auth-c-tests/src/tests/: mod.rs
tests/auth-rust-lock/contracts/auth-rust-demo/: Cargo.toml
tests/auth-rust-lock/contracts/auth-rust-demo/src/: entry.rs
tests/auth_rust/src/tests/: mod.rs
tools/ckb-auth-cli/: Cargo.toml
tools/ckb-auth-cli/src/: lib.rs  tx.rs
tools/ckb-auth-cli/src/chain_command/: litecoin.rs  monero.rs  solana.rs
