[package]
name = "ckb-auth-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-auth-types = { path = "../../ckb-auth-types" }
ckb-vm = { version = "0.24.0", features = [ "asm" ] }
ckb-types = "=0.111.0-rc2"
ckb-hash = "=0.111.0-rc2"
ckb-script = "=0.111.0-rc2"
clap = "4.3.2"
hex = "0.4.3"
lazy_static = "1.3.0"
bs58 = "0.5.0"
anyhow = "1.0.71"
base64 = "0.21.0"
serde_json = "1.0"
monero = { version = "0.18.2", features = ["serde"] }
base58-monero = "1.0.0"
mbedtls = "0.8.1"
sha2 = "0.10.6"

blake2b-rs = "0.1"
ckb-crypto = "=0.111.0-rc2"
ckb-error = "=0.111.0-rc2"
ckb-traits = "=0.111.0-rc2"
ckb-chain-spec = "=0.111.0-rc2"
once_cell = "1.18.0"
ref_thread_local = "0.1.1"
rand = "0.6.5"
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree.git", rev = "2dce546"}
sha3 = "0.9.1"
bitcoin = "0.30.0"
hex-literal = "0.4.1"
tiny-keccak = "2.0.2"
log = { version = "0.4.14", features = ["std"] }
bincode = "1.3.3"
serde = { version = "=1.0.163", features = ["derive"] }
secp256k1 = { version = "0.22.1", features = ["rand-std", "recovery"] }
dyn-clone = "1.0.4"
tempdir = "0.3.7"
which = "4.4.0"
solana-sdk = { version = "1.16.1" , default-features = false }
solana-cli-output = { version = "1.16.1", default-features = false }
ripple-keypairs = "0.1.0"
p256 = { version = "^0.10.1" }
